<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">计算器</string>

    <!-- 启动页 -->
    <string name="extra_describe">计算器 v1.0\n基于Android的简易计算器</string>
    <string name="start_describe">作者：杨唐</string>

    <!-- 计算器页面 -->
    <string name="input_formula">输入公式计算</string>
    <string name="invalid_formula">公式有误。</string>
    <string name="zero_err">除数不能为零</string>
    <!-- 数字 -->
    <string name="number_0" translatable="false">0</string>
    <string name="number_1" translatable="false">1</string>
    <string name="number_2" translatable="false">2</string>
    <string name="number_3" translatable="false">3</string>
    <string name="number_4" translatable="false">4</string>
    <string name="number_5" translatable="false">5</string>
    <string name="number_6" translatable="false">6</string>
    <string name="number_7" translatable="false">7</string>
    <string name="number_8" translatable="false">8</string>
    <string name="number_9" translatable="false">9</string>
    <!-- 运算符 -->
    <string name="number_dot" translatable="false">.</string>
    <string name="op_ac" translatable="false">AC</string>
    <string name="op_del" translatable="false">DEL</string>
    <string name="op_pct" translatable="false">%</string>
    <string name="op_div" translatable="false">÷</string>
    <string name="op_mul" translatable="false">×</string>
    <string name="op_sub" translatable="false">-</string>
    <string name="op_add" translatable="false">+</string>
    <string name="op_eql" translatable="false">=</string>

    <!-- 菜单 -->
    <string name="theme">主题</string>
    <string name="lang">语言</string>
    <string name="about">关于</string>
    <string name="menu_tip">提示：屏幕左边缘右滑可以打开本菜单。</string>
    <string name="lang_default">默认</string>
    <string name="lang_sim_chinese">简体中文</string>
    <string name="lang_english">英语</string>
</resources>