<?xml version="1.0" encoding="utf-8"?>
<com.yang.widget.LeftSlideMenu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yang.ccalculator.Calculator">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0">

        <TableRow android:layout_weight="10">

            <EditText
                android:id="@+id/edit_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="12"
                android:background="@drawable/slc_cal_editor_bg"
                android:gravity="center_vertical|end"
                android:hint="@string/input_formula"
                android:paddingBottom="8dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="8dp"
                android:textColor="@color/editor_text"
                android:textColorHint="@color/editor_hint"
                android:textCursorDrawable="@drawable/cal_cursor_style"
                android:textSize="30sp" />

        </TableRow>

        <TableRow android:layout_weight="3">

            <TextView
                android:id="@+id/op_ac"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/op_ac" />

            <TextView
                android:id="@+id/op_del"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/op_del" />

            <TextView
                android:id="@+id/op_pct"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/op_pct" />

            <TextView
                android:id="@+id/op_div"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/op_div" />
        </TableRow>

        <TableRow android:layout_weight="3">

            <TextView
                android:id="@+id/number_7"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_7" />

            <TextView
                android:id="@+id/number_8"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_8" />

            <TextView
                android:id="@+id/number_9"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_9" />

            <TextView
                android:id="@+id/op_mul"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/op_mul" />
        </TableRow>

        <TableRow android:layout_weight="3">

            <TextView
                android:id="@+id/number_4"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_4" />

            <TextView
                android:id="@+id/number_5"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_5" />

            <TextView
                android:id="@+id/number_6"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_6" />

            <TextView
                android:id="@+id/op_sub"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/op_sub" />
        </TableRow>

        <TableRow android:layout_weight="3">

            <TextView
                android:id="@+id/number_1"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_1" />

            <TextView
                android:id="@+id/number_2"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_2" />

            <TextView
                android:id="@+id/number_3"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_3" />

            <TextView
                android:id="@+id/op_add"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/op_add" />
        </TableRow>

        <TableRow android:layout_weight="3">

            <TextView
                android:id="@+id/number_0"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/number_0" />

            <TextView
                android:id="@+id/number_dot"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_dot" />

            <TextView
                android:id="@+id/op_equal"
                style="@style/CalculateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/op_eql" />

        </TableRow>
    </TableLayout>

    <include layout="@layout/calculator_menu" />

</com.yang.widget.LeftSlideMenu>